--- a/index.html
+++ b/index.html
@@ -131,9 +131,8 @@ h1{
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
-  margin-left:8px;
+  margin-left:8px; /* alineado original */
   overflow:hidden;
-  padding:0 80px;
 }
 
 .portfolio-carousel{
