--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@ h1{
 .portfolio-wrapper{
   position:relative;
   margin-top:32px;
-  margin-left:8px; /* alineado original */
-  overflow:hidden;
+  margin-left:8px;
+  display:flex;
+  align-items:center;
 }
 
 .portfolio-carousel{
@@ -143,13 +144,12 @@ h1{
   scroll-behavior:smooth;
 }
 
-/* ========= FLECHAS ========= */
+/* ========= FLECHAS (FUERA) ========= */
 .carousel-arrow{
-  position:absolute;
-  top:50%;
-  transform:translateY(-50%);
+  flex:0 0 auto;
   width:44px;
   height:44px;
+  margin:0 24px;
   border:1px solid #444;
   border-radius:50%;
   display:flex;
@@ -165,7 +165,6 @@ h1{
     background .3s ease,
     color .3s ease,
     border .3s ease;
-  z-index:10;
 }
 
 .carousel-arrow:hover{
@@ -173,9 +172,6 @@ h1{
   color:#000;
   border-color:#fff;
 }
-
-.carousel-arrow.left{ left:16px; }
-.carousel-arrow.right{ right:16px; }
 
 .carousel-arrow.hidden{
   opacity:0;
@@ -327,7 +323,6 @@ h1{
     <div class="portfolio-wrapper">
 
       <div class="carousel-arrow left">&#10094;</div>
-      <div class="carousel-arrow right">&#10095;</div>
 
       <div class="portfolio-carousel">
 
@@ -370,6 +365,9 @@ h1{
         </a>
 
       </div>
+
+      <div class="carousel-arrow right">&#10095;</div>
+
     </div>
   </div>
 </section>
