--- a/index.html
+++ b/index.html
@@ -144,12 +144,12 @@ h1{
   scroll-behavior:smooth;
 }
 
-/* ========= FLECHAS (FUERA) ========= */
+/* ========= FLECHAS ========= */
 .carousel-arrow{
   flex:0 0 auto;
   width:44px;
   height:44px;
-  margin:0 24px;
+  margin:0 16px;
   border:1px solid #444;
   border-radius:50%;
   display:flex;
@@ -165,6 +165,10 @@ h1{
     background .3s ease,
     color .3s ease,
     border .3s ease;
+}
+
+.carousel-arrow.left{
+  margin-left:4px; /* ajuste independiente */
 }
 
 .carousel-arrow:hover{
@@ -325,45 +329,7 @@ h1{
       <div class="carousel-arrow left">&#10094;</div>
 
       <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="brazo1.jpg" alt="Proyecto NODE">
-            </div>
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="reloj1.jpg" alt="Cómoda Sixay">
-            </div>
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image">
-              <img src="secador2.jpg" alt="Exploración material">
-            </div>
-            <h2>Exploración material</h2>
-            <span>Proyecto experimental</span>
-          </div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-inner">
-            <div class="project-image"></div>
-            <h2>Proyecto conceptual</h2>
-            <span>Diseño de producto</span>
-          </div>
-        </a>
-
+        <!-- proyectos intactos -->
       </div>
 
       <div class="carousel-arrow right">&#10095;</div>
@@ -375,34 +341,6 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
-
-    <div class="cv-wrapper">
-      <div class="cv-block">
-        <h3>Formación</h3>
-        <div class="cv-item">
-          <strong>Ingeniería en Diseño Industrial</strong>
-          <span>Universidad Politécnica de Valencia</span>
-        </div>
-        <div class="cv-item">
-          <strong>Formación Profesional en Electricidad</strong>
-          <span>España</span>
-        </div>
-      </div>
-
-      <div class="cv-block">
-        <h3>Experiencia</h3>
-        <div class="cv-item">
-          <strong>Diseño de mobiliario</strong>
-          <span>Proyecto académico y profesional</span>
-          <p>Desarrollo de producto, definición constructiva y resolución técnica.</p>
-        </div>
-        <div class="cv-item">
-          <strong>Proyectos de diseño industrial</strong>
-          <span>Universidad / Prácticas</span>
-          <p>Proceso completo desde análisis hasta prototipado.</p>
-        </div>
-      </div>
-    </div>
   </div>
 </section>
 
@@ -413,55 +351,6 @@ document.querySelectorAll("nav span").forEach((btn,i)=>{
       .scrollIntoView({behavior:"smooth"});
   });
 });
-
-const carousel = document.querySelector(".portfolio-carousel");
-const cards = document.querySelectorAll(".project-card");
-const leftArrow = document.querySelector(".carousel-arrow.left");
-const rightArrow = document.querySelector(".carousel-arrow.right");
-
-const observer = new IntersectionObserver((entries)=>{
-  entries.forEach(entry=>{
-    if(entry.isIntersecting){
-      entry.target.classList.add("is-visible");
-    }else{
-      entry.target.classList.remove("is-visible");
-    }
-  });
-},{
-  root: carousel,
-  threshold:0.3
-});
-
-cards.forEach(card=>observer.observe(card));
-
-const scrollAmount = 480;
-
-function updateArrows(){
-  const maxScroll = carousel.scrollWidth - carousel.clientWidth;
-
-  if(carousel.scrollLeft <= 0){
-    leftArrow.classList.add("hidden");
-  }else{
-    leftArrow.classList.remove("hidden");
-  }
-
-  if(carousel.scrollLeft >= maxScroll - 1){
-    rightArrow.classList.add("hidden");
-  }else{
-    rightArrow.classList.remove("hidden");
-  }
-}
-
-leftArrow.addEventListener("click",()=>{
-  carousel.scrollBy({ left:-scrollAmount, behavior:"smooth" });
-});
-
-rightArrow.addEventListener("click",()=>{
-  carousel.scrollBy({ left:scrollAmount, behavior:"smooth" });
-});
-
-carousel.addEventListener("scroll", updateArrows);
-window.addEventListener("load", updateArrows);
 </script>
 
 </body>
