--- a/index.html
+++ b/index.html
@@ -132,8 +132,23 @@ h1{
   position:relative;
   margin-top:32px;
   margin-left:8px;
-  display:flex;
-  align-items:center;
+  overflow:hidden;
+  padding-right:120px;
+}
+
+.portfolio-wrapper::after{
+  content:"";
+  position:absolute;
+  top:0;
+  right:0;
+  width:120px;
+  height:100%;
+  pointer-events:none;
+  background:linear-gradient(
+    to right,
+    rgba(10,10,10,0),
+    rgba(10,10,10,1)
+  );
 }
 
 .portfolio-carousel{
@@ -142,47 +157,19 @@ h1{
   overflow-x:auto;
   padding-bottom:20px;
   scroll-behavior:smooth;
+  scrollbar-width:thin;
+  scrollbar-color:#444 transparent;
 }
 
-/* ========= FLECHAS ========= */
-.carousel-arrow{
-  flex:0 0 auto;
-  width:44px;
-  height:44px;
-  margin:0 16px;
-  border:1px solid #444;
-  border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
-  color:#ddd;
-  font-size:18px;
-  background:rgba(10,10,10,.6);
-  backdrop-filter:blur(6px);
-  transition:
-    opacity .3s ease,
-    background .3s ease,
-    color .3s ease,
-    border .3s ease;
+.portfolio-carousel::-webkit-scrollbar{
+  height:6px;
 }
 
-.carousel-arrow.left{
-  margin-left:4px; /* ajuste independiente */
+.portfolio-carousel::-webkit-scrollbar-thumb{
+  background:#444;
+  border-radius:6px;
 }
 
-.carousel-arrow:hover{
-  background:#fff;
-  color:#000;
-  border-color:#fff;
-}
-
-.carousel-arrow.hidden{
-  opacity:0;
-  pointer-events:none;
-}
-
-/* ========= PROYECTO ========= */
 .project-card{
   min-width:460px;
   flex-shrink:0;
@@ -203,7 +190,9 @@ h1{
   transform:translateY(-4px);
 }
 
-.project-inner{ width:100%; }
+.project-inner{
+  width:100%;
+}
 
 .project-image{
   height:260px;
@@ -276,6 +265,20 @@ h1{
   color:#aaa;
 }
 
+/* ========= FOOTER ========= */
+.footer-wrapper{
+  flex:1;
+  display:flex;
+  align-items:flex-end;
+  padding:0 0 20px 22vw;
+}
+
+.footer{
+  font-size:11px;
+  letter-spacing:.18em;
+  color:#cfcfcf;
+}
+
 </style>
 </head>
 
@@ -325,15 +328,47 @@ h1{
     <h1>Portfolio</h1>
 
     <div class="portfolio-wrapper">
-
-      <div class="carousel-arrow left">&#10094;</div>
-
       <div class="portfolio-carousel">
-        <!-- proyectos intactos -->
+
+        <a href="node.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="brazo1.jpg" alt="Proyecto NODE">
+            </div>
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="reloj1.jpg" alt="Cómoda Sixay">
+            </div>
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image">
+              <img src="secador2.jpg" alt="Exploración material">
+            </div>
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-inner">
+            <div class="project-image"></div>
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
-
-      <div class="carousel-arrow right">&#10095;</div>
-
     </div>
   </div>
 </section>
@@ -341,6 +376,64 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
+
+    <div class="cv-wrapper">
+
+      <div class="cv-block">
+        <h3>Formación</h3>
+        <div class="cv-item">
+          <strong>Ingeniería en Diseño Industrial</strong>
+          <span>Universidad Politécnica de Valencia</span>
+        </div>
+        <div class="cv-item">
+          <strong>Programa Erasmus</strong>
+          <span>Middlesex University · Londres</span>
+        </div>
+        <div class="cv-item">
+          <strong>Formación Profesional en Electricidad</strong>
+          <span>España</span>
+        </div>
+      </div>
+
+      <div class="cv-block">
+        <h3>Experiencia</h3>
+        <div class="cv-item">
+          <strong>Diseño de mobiliario</strong>
+          <span>Proyecto académico y profesional</span>
+          <p>Desarrollo de producto, definición constructiva y resolución técnica.</p>
+        </div>
+        <div class="cv-item">
+          <strong>Proyectos de diseño industrial</strong>
+          <span>Universidad / Prácticas</span>
+          <p>Proceso completo desde análisis hasta prototipado.</p>
+        </div>
+      </div>
+
+      <div class="cv-block">
+        <h3>Idiomas</h3>
+        <div class="cv-item">
+          <strong>Español</strong>
+          <span>Nativo</span>
+        </div>
+        <div class="cv-item">
+          <strong>Inglés</strong>
+          <span>Avanzado</span>
+        </div>
+      </div>
+
+      <div class="cv-block">
+        <h3>Software</h3>
+        <div class="cv-item">
+          <strong>Rhinoceros · Fusion 360</strong>
+          <span>Modelado y desarrollo de producto</span>
+        </div>
+        <div class="cv-item">
+          <strong>KeyShot · Adobe Suite</strong>
+          <span>Visualización y comunicación</span>
+        </div>
+      </div>
+
+    </div>
   </div>
 </section>
 
@@ -351,6 +444,24 @@ document.querySelectorAll("nav span").forEach((btn,i)=>{
       .scrollIntoView({behavior:"smooth"});
   });
 });
+
+const carousel = document.querySelector(".portfolio-carousel");
+const cards = document.querySelectorAll(".project-card");
+
+const observer = new IntersectionObserver((entries)=>{
+  entries.forEach(entry=>{
+    if(entry.isIntersecting){
+      entry.target.classList.add("is-visible");
+    }else{
+      entry.target.classList.remove("is-visible");
+    }
+  });
+},{
+  root:carousel,
+  threshold:0.3
+});
+
+cards.forEach(card=>observer.observe(card));
 </script>
 
 </body>
