--- a/index.html
+++ b/index.html
@@ -382,6 +382,18 @@ h1{
       </div>
 
       <div class="cv-block">
+        <h3>Experiencia</h3>
+        <div class="cv-item">
+          <strong>Sector eléctrico</strong>
+          <span>Autrial</span>
+        </div>
+        <div class="cv-item">
+          <strong>Sector eléctrico</strong>
+          <span>Elecnor</span>
+        </div>
+      </div>
+
+      <div class="cv-block">
         <h3>Idiomas</h3>
         <div class="cv-item"><strong>Español</strong><span>Nativo</span></div>
         <div class="cv-item"><strong>Inglés</strong><span>Avanzado</span></div>
