--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 body{
   background:#0a0a0a;
   color:#f5f5f5;
-  overflow-y:scroll;
-  scroll-snap-type:y mandatory;
+  scroll-behavior:smooth;
 }
 
 /* ========= NAV ========= */
@@ -53,16 +52,12 @@ nav span{
 /* ========= SECTIONS ========= */
 .section{
   min-height:100vh;
-  scroll-snap-align:start;
   display:flex;
-  justify-content:flex-start;
   padding:180px 10vw 160px 22vw;
 }
 
 /* ========= SECTION BLOCK ========= */
 .section-block{
-  position:sticky;
-  top:260px;
   max-width:1100px;
 }
 
@@ -74,7 +69,6 @@ nav span{
 .section.hero h1{
   font-size:clamp(80px,7vw,140px);
   line-height:1.05;
-  margin-left:-4px;
 }
 
 .hero-surname{ white-space:nowrap; }
@@ -100,24 +94,19 @@ h1{
   padding-left:8px;
   font-size:15px;
   color:#aaa;
-  max-width:600px;
+  max-width:700px;
   line-height:1.6;
-  text-align:justify;
 }
 
 /* ========= ABOUT ========= */
 .about{
   display:flex;
-  align-items:flex-start;
-  margin-top:12px;
+  margin-top:20px;
 }
-
-.about p{ max-width:700px; }
 
 .about img{
   width:300px;
   height:400px;
-  margin-top:16px;
   margin-left:40px;
   object-fit:cover;
   opacity:.9;
@@ -125,30 +114,13 @@ h1{
 
 /* ========= PORTFOLIO ========= */
 .portfolio-wrapper{
-  position:relative;
-  margin-top:32px;
-  margin-left:8px;
-  overflow:hidden;
-  padding-right:120px;
-}
-
-.portfolio-wrapper::after{
-  content:"";
-  position:absolute;
-  top:0;
-  right:0;
-  width:120px;
-  height:100%;
-  pointer-events:none;
-  background:linear-gradient(to right, rgba(10,10,10,0), rgba(10,10,10,1));
+  margin-top:40px;
 }
 
 .portfolio-carousel{
   display:flex;
   gap:48px;
   overflow-x:auto;
-  padding-bottom:20px;
-  scroll-behavior:smooth;
   scrollbar-width:thin;
   scrollbar-color:#444 transparent;
 }
@@ -161,13 +133,9 @@ h1{
 
 .project-card{
   min-width:460px;
-  flex-shrink:0;
-  text-decoration:none;
-  color:inherit;
-  cursor:pointer;
   opacity:0;
   transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
+  transition:.8s;
 }
 
 .project-card.is-visible{
@@ -175,84 +143,44 @@ h1{
   transform:translateY(0);
 }
 
-.project-card:hover{ transform:translateY(-4px); }
-
-.project-image{
-  height:260px;
-  margin-bottom:20px;
-  overflow:hidden;
-}
-
-.project-image img{
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  transition:transform .4s ease;
-}
-
-.project-card:hover img{ transform:scale(1.03); }
-
 /* ========= CV ========= */
 .cv-wrapper{
-  margin-top:32px;
+  margin-top:40px;
   display:grid;
   grid-template-columns:1fr 1fr;
   gap:80px;
 }
 
 .cv-block{
+  transform:translateY(40px);
   opacity:0;
-  transform:translateY(16px);
-  transition:opacity .7s ease, transform .7s ease;
-}
-
-.cv-block.is-visible{
-  opacity:1;
-  transform:translateY(0);
 }
 
 .cv-block h3{
   font-size:18px;
-  font-weight:500;
   letter-spacing:.12em;
   text-transform:uppercase;
   margin-bottom:20px;
 }
 
 .cv-item{
-  margin-bottom:20px;
-  transition:transform .3s ease, color .3s ease;
-}
-
-.cv-item:hover{
-  transform:translateX(6px);
+  margin-bottom:18px;
 }
 
 .cv-item strong{
-  display:block;
   font-size:15px;
-  font-weight:500;
 }
 
 .cv-item span{
-  display:block;
   font-size:13px;
   color:#888;
-  margin-top:2px;
 }
 
 /* ========= FOOTER ========= */
-.footer-wrapper{
-  flex:1;
-  display:flex;
-  align-items:flex-end;
-  padding:0 0 20px 22vw;
-}
-
 .footer{
+  padding:40px;
   font-size:11px;
-  letter-spacing:.18em;
-  color:#cfcfcf;
+  color:#777;
 }
 
 </style>
@@ -265,7 +193,6 @@ h1{
   <span data-i="1">Sobre mí</span>
   <span data-i="2">Portfolio</span>
   <span data-i="3">CV</span>
-  <span data-i="4">Contacto</span>
 </nav>
 
 <section class="section hero">
@@ -279,11 +206,7 @@ h1{
   <div class="section-block">
     <h1>Sobre mí</h1>
     <div class="about">
-      <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico, flexible y
-        adaptable, situado entre lo técnico y lo conceptual. Disfruto del proceso completo de diseño,
-        desde el análisis hasta la materialización.
-      </p>
+      <p>Ingeniero en diseño industrial con formación técnica en electricidad y perfil híbrido entre lo conceptual y lo técnico.</p>
       <img src="foto.jpg">
     </div>
   </div>
@@ -294,8 +217,8 @@ h1{
     <h1>Portfolio</h1>
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <a href="#" class="project-card"><div class="project-image"></div></a>
-        <a href="#" class="project-card"><div class="project-image"></div></a>
+        <div class="project-card"></div>
+        <div class="project-card"></div>
       </div>
     </div>
   </div>
@@ -306,6 +229,7 @@ h1{
     <h1>CV</h1>
 
     <div class="cv-wrapper">
+
       <div class="cv-block">
         <h3>Formación</h3>
         <div class="cv-item"><strong>UJI</strong><span>Castellón</span></div>
@@ -332,31 +256,38 @@ h1{
         <div class="cv-item"><strong>SolidWorks · Fusion 360</strong></div>
         <div class="cv-item"><strong>Sinutrain · 3ds Max</strong></div>
       </div>
+
     </div>
   </div>
 </section>
 
 <script>
+/* Navegación */
 document.querySelectorAll("nav span").forEach((btn,i)=>{
-  btn.addEventListener("click",()=>{
-    document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
-  });
+  btn.onclick=()=>document.querySelectorAll(".section")[i].scrollIntoView({behavior:"smooth"});
 });
 
-/* Portfolio animation */
-const carousel=document.querySelector(".portfolio-carousel");
-const cards=document.querySelectorAll(".project-card");
-const cardObserver=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{root:carousel,threshold:0.3});
-cards.forEach(c=>cardObserver.observe(c));
+/* Portfolio */
+document.querySelectorAll(".project-card").forEach(card=>{
+  new IntersectionObserver(e=>{
+    card.classList.toggle("is-visible",e[0].isIntersecting);
+  }).observe(card);
+});
 
-/* CV animation */
+/* CV transición continua */
 const cvBlocks=document.querySelectorAll(".cv-block");
-const cvObserver=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:0.3});
-cvBlocks.forEach(b=>cvObserver.observe(b));
+
+window.addEventListener("scroll",()=>{
+  const vh=window.innerHeight;
+
+  cvBlocks.forEach(block=>{
+    const rect=block.getBoundingClientRect();
+    const progress=1-Math.min(Math.max(rect.top/vh,0),1);
+
+    block.style.opacity=progress;
+    block.style.transform=`translateY(${40*(1-progress)}px)`;
+  });
+});
 </script>
 
 </body>
