--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ nav span{
   opacity:.9;
 }
 
-/* ========= PORTFOLIO (intacto) ========= */
+/* ========= PORTFOLIO (base funcional) ========= */
 .portfolio-carousel{
   display:flex;
   gap:48px;
@@ -110,6 +110,8 @@ nav span{
 
 .project-card{
   min-width:460px;
+  height:260px;
+  background:#222;
   opacity:0;
   transform:translateY(12px);
   transition:.8s;
@@ -125,21 +127,42 @@ nav span{
   position:relative;
 }
 
+/* --- TÍTULO STICKY --- */
 .cv-title{
   position:sticky;
   top:180px;
-  width:300px;
+  width:260px;
 }
 
 .cv-title h1{
   font-size:clamp(70px,6vw,120px);
 }
 
+/* --- LÍNEA DE PROGRESO --- */
+.cv-line{
+  position:sticky;
+  top:180px;
+  margin-left:40px;
+  width:2px;
+  height:60vh;
+  background:#222;
+}
+
+.cv-line-fill{
+  position:absolute;
+  bottom:0;
+  width:100%;
+  height:0%;
+  background:#777;
+  transition:height .1s linear;
+}
+
+/* --- CONTENIDO --- */
 .cv-scroll{
-  margin-left:340px;
+  margin-left:120px;
   display:flex;
   flex-direction:column;
-  gap:160px;
+  gap:180px;
   padding-bottom:200px;
 }
 
@@ -147,7 +170,6 @@ nav span{
   max-width:520px;
   opacity:0;
   transform:translateY(60px);
-  transition:opacity .2s linear, transform .2s linear;
 }
 
 .cv-block h3{
@@ -171,6 +193,23 @@ nav span{
   font-size:13px;
   color:#888;
   margin-top:2px;
+}
+
+/* --- PUNTO DE BLOQUE --- */
+.cv-dot{
+  position:absolute;
+  left:-49px;
+  top:6px;
+  width:10px;
+  height:10px;
+  border-radius:50%;
+  background:#777;
+  opacity:.2;
+  transition:opacity .2s;
+}
+
+.cv-block.active .cv-dot{
+  opacity:1;
 }
 
 </style>
@@ -198,7 +237,7 @@ nav span{
     <div class="about">
       <p>
         Ingeniero en diseño industrial con formación técnica en electricidad y un perfil híbrido
-        entre lo conceptual y lo técnico. Formación en UJI, UPV y Erasmus en Londres.
+        entre lo conceptual y lo técnico.
       </p>
       <img src="foto.jpg">
     </div>
@@ -216,15 +255,21 @@ nav span{
   </div>
 </section>
 
-<!-- ========= CV STICKY ========= -->
+<!-- ========= CV STICKY + LÍNEA ========= -->
 <section class="section cv-section">
+
   <div class="cv-title">
     <h1>CV</h1>
+  </div>
+
+  <div class="cv-line">
+    <div class="cv-line-fill" id="cvLineFill"></div>
   </div>
 
   <div class="cv-scroll">
 
     <div class="cv-block">
+      <div class="cv-dot"></div>
       <h3>Formación</h3>
       <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>UJI · Castellón</span></div>
       <div class="cv-item"><strong>Grado en Diseño Industrial</strong><span>UPV · Valencia</span></div>
@@ -232,12 +277,14 @@ nav span{
     </div>
 
     <div class="cv-block">
+      <div class="cv-dot"></div>
       <h3>Experiencia</h3>
       <div class="cv-item"><strong>Autrial</strong><span>Sector eléctrico</span></div>
       <div class="cv-item"><strong>Elecnor</strong><span>Sector eléctrico</span></div>
     </div>
 
     <div class="cv-block">
+      <div class="cv-dot"></div>
       <h3>Idiomas</h3>
       <div class="cv-item"><strong>Español</strong><span>Nativo</span></div>
       <div class="cv-item"><strong>Inglés</strong><span>Avanzado</span></div>
@@ -245,6 +292,7 @@ nav span{
     </div>
 
     <div class="cv-block">
+      <div class="cv-dot"></div>
       <h3>Software</h3>
       <div class="cv-item"><strong>Rhino · AutoCAD · Inventor</strong></div>
       <div class="cv-item"><strong>SolidWorks · Fusion 360</strong></div>
@@ -268,19 +316,30 @@ document.querySelectorAll(".project-card").forEach(card=>{
   }).observe(card);
 });
 
-/* CV bloques que pasan */
+/* CV progreso */
 const cvBlocks=document.querySelectorAll(".cv-block");
+const lineFill=document.getElementById("cvLineFill");
 
 window.addEventListener("scroll",()=>{
   const vh=window.innerHeight;
+  let maxProgress=0;
 
-  cvBlocks.forEach(block=>{
+  cvBlocks.forEach((block,i)=>{
     const rect=block.getBoundingClientRect();
     const progress=1-Math.min(Math.max(rect.top/(vh*0.8),0),1);
 
     block.style.opacity=progress;
     block.style.transform=`translateY(${60*(1-progress)}px)`;
+
+    if(progress>0.6){
+      block.classList.add("active");
+      maxProgress=Math.max(maxProgress,(i+1)/cvBlocks.length);
+    }else{
+      block.classList.remove("active");
+    }
   });
+
+  lineFill.style.height=`${maxProgress*100}%`;
 });
 
 </script>
